<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:stretchColumns="*" >

  <!--  <EditText
        android:id="@+id/isbnEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/queryPrompt"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal" >
    </EditText>
 -->
 
 <TextView
        android:id="@+id/pdtNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdtName"
        android:textColor="#000000"
        android:textSize="23sp" >
    </TextView>

    <ImageButton
        android:id="@+id/pdtImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_launcher" >
    </ImageButton>
    
<!--      <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="0dp"
            android:focusable="false"
            android:text="@string/search" >
        </Button>
 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_orange" >

        <Button
            android:id="@+id/priceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:textStyle="bold"
            android:textSize="23sp"
            android:text="@string/price" >
        </Button>

        <Button
            android:id="@+id/stockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock" >
        </Button>

        <Button
            android:id="@+id/shippingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shipping" >
        </Button>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_orange" >

        <TextView
            android:id="@+id/merchant1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="42dp"
            android:text="@string/merchant1"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant1PriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="42dp"
            android:text="@string/merchant1Price"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="82dp"
            android:text="@string/merchant2"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant2PriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="82dp"
            android:text="@string/merchant2Price"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="122dp"
            android:text="@string/merchant3"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant3PriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="122dp"
            android:text="@string/merchant3Price"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>
                <TextView
            android:id="@+id/merchant4TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="162dp"
            android:text="@string/merchant4"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <TextView
            android:id="@+id/merchant4PriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="162dp"
            android:text="@string/merchant4Price"
            android:textColor="#000000"
            android:textSize="23sp" >
        </TextView>

        <Button
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:onClick="activity_main"
            android:text="@string/menu" >
        </Button>
    </RelativeLayout>

</LinearLayout>