<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 >

    <EditText
        android:id="@+id/queryEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/queryPrompt"
        android:imeOptions="actionNext"
        android:textColor = "#ffffff"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/queryEditText"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:text="@string/search" >

        <requestFocus />
    </Button>

    <TextView
        android:id="@+id/scanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="70dp"
        android:text="@string/scan"
        android:textColor="@color/light_orange"
        android:textSize="19sp"
        android:textStyle="italic|bold" >

    </TextView>

    <ImageButton
        android:id="@+id/scanImageButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="55dp"
        android:background="@null"
        android:src="@drawable/scan2" >

    </ImageButton>

    <TextView
        android:id="@+id/snapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="140dp"
        android:text="@string/snap"
        android:textColor="@color/light_orange"
        android:textSize="19sp"
        android:textStyle="italic|bold" >

    </TextView>

    <ImageButton
        android:id="@+id/snapImageButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="130dp"
        android:background="@null"
        android:src="@drawable/snap1" >
    </ImageButton>
    
  <!--      <EditText
            android:id="@+id/edittext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:hint="@string/price"
            android:inputType="text"
            android:textColor="#f1f01f" >

        <requestFocus />
    </EditText>
    
            <EditText
                android:id="@+id/edittext2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="330dp"
                android:hint="@string/stock"
                android:inputType="text"
                android:textColor="#f1f01f" >

        <requestFocus />
    </EditText>
    -->

</RelativeLayout>